2000-01-20  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/listexpand.c:
	    Added parametrization on how large bundles to make.
	    Default is the same old 200..

	* transports/smtp/smtp.c:
	    Turned out that Linux glibc 2.1 getaddrinfo() has some
	    strange bugs when it is left to its devices to scan for
	    a generic address suite -- it doesn't scan only IPv4 and
	    IPv6, but also some others, and if it gets error anywhere,
	    it seems to barf..  Will now scan for IPv4 and IPv6
	    separately :-/  So much for the great transparent API ...

	* utils/mxverify-cgi.c, utils/mxverify-cgi.html:
	    Detected the above problem while playing with this utility,
	    and developed that change here..
	    Reworked quite some things after initial deployment, added
	    that page into CVS for supplementary info.

2000-01-19  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* include/ta.h,           transports/libta/diagnostic.c,
	  transports/smtp/smtp.c, transports/libta/tasyslog.c:
	    Report (at smtp) also the conversion mode used
	    at the reported session.

	* utils/mxverify-cgi.c, utils/Makefile.in:
	    Writing a utility to ease destination domain verification
	    by testing *all* MXes of given domain.

2000-01-17  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    Accept SMTP verbs which have numbers in them.
	    Treat verb "550" by responding SILENTLY to it -- e.g.
	    don't reply anything when get it.

	* smtpserver/mxverify.c:
	    Treat RBL-type lookups as ERRORS only when the DNS
	    yields A record under mask: 127.0.0.0/24.  There exists
	    a zone:  .ok.orbs.org  which has  127.127.0.0/24 and
	    THOSE are verified to be ok.  If using ORBS, use first
	    the OK zone, only then the RELAYS zone.
	    ( -> On larger blocked zone, an individual OK entry can
	         accept email. )

2000-01-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/msgerror.c, include/ta.h, transports/libta/diagnostic.c,